syntax = "proto3";

package user;

option go_package = "go-study/examples/microservices/06-ecommerce-microservices/proto/user";

// 用户服务
service UserService {
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  // 获取用户
  rpc GetUser(GetUserRequest) returns (UserResponse);
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // 验证用户
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
}

// 创建用户请求
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
}

// 获取用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// 更新用户请求
message UpdateUserRequest {
  int64 user_id = 1;
  string email = 2;
  string full_name = 3;
}

// 删除用户请求
message DeleteUserRequest {
  int64 user_id = 1;
}

// 验证用户请求
message ValidateUserRequest {
  int64 user_id = 1;
}

// 用户登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 用户响应
message UserResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string created_at = 5;
  string updated_at = 6;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// 验证用户响应
message ValidateUserResponse {
  bool valid = 1;
  UserResponse user = 2;
}

// 登录响应
message LoginResponse {
  bool success = 1;
  string token = 2;
  UserResponse user = 3;
}

